--- a/src/Makefile
+++ b/src/Makefile
@@ -3,11 +3,13 @@ CC = arm-none-eabi-gcc
 CFLAGS = --std=gnu11 -O0 -mcpu=cortex-m3 -mthumb -fno-builtin  --specs=nosys.specs -ffreestanding -Tgcc.ld -Wl,--entry=main
 INCLD = -I ../../../tools/ATMEL/ -I ../../../tools/CMSIS/include
 
+SRC_CC =  main.c UART/uart.c Timers/timers.c
+
 kernel.bin : kernel.elf
 	$(OBYCP) -O binary kernel.elf kernel.bin
 
-kernel.elf : main.c UART/uart.c
-	$(CC) $(CFLAGS) -o kernel.elf main.c UART/uart.c startup_ARMCM3.S $(INCLD)
+kernel.elf : $(SRC_CC)
+	$(CC) $(CFLAGS) -o kernel.elf $^ startup_ARMCM3.S $(INCLD)
 
 clean:
 	rm kernel.elf kernel.bin
@@ -20,5 +22,5 @@ reset:
 
 upload : kernel.bin reset
 	bossac -i --port=cu.usbmodem14111 -U=false -e -w -b kernel.bin
-	#stty -f /dev/cu.usbmodem14111 9600 # restar board
-	cat /dev/cu.usbmodem14111
+	stty -f /dev/cu.usbmodem14111 9600 # restar board
+	#cat /dev/cu.usbmodem14111
