--- a/src/hardware/Makefile
+++ b/src/hardware/Makefile
@@ -1,8 +1,8 @@
 #link to hardware lib based on board
 ifeq ($(TARGET),sam3x8e)
 	MAKE_DIR = sam3x8eHardwareAPI/
-	CP_ARGS =sam3x8eHardwareAPI/build/libsam3x8e.a ./api.a
-	DEPEND = libsam3x8e.a
+	CP_ARGS =sam3x8eHardwareAPI/build/libsam3x8e.o ./api.o
+	DEPEND = libsam3x8e.o
 else
 # TARGET board not recognized
 	MAKE_DIR = BAD_TARGET
@@ -11,10 +11,10 @@ else
 endif
 
 
-api.a: $(DEPEND)
+api.o: $(DEPEND)
 	cp $(CP_ARGS)
 
 # tell make to allways call library make file
-.PHONY: libsam3x8e.a
-libsam3x8e.a:
+.PHONY: libsam3x8e.o
+libsam3x8e.o:
 	make -C $(MAKE_DIR)
